--- a/contact/index.html
+++ b/contact/index.html
@@ -53,7 +53,7 @@ category: contact
 <div>
       <input type="hidden" name="">
       <input type="submit" class="submit-btn" value="Let's make business">
-      or <a href="mailto:ariestiyansyah.rizky@gmail.com">Drop me an emaill</a>
+      or <a href="mailto:finalxcode@gmail.com">Drop me an emaill</a>
     </div>
   </form>
 </section>
