--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,5 @@
 ---
-title: Contact
+title: 联系
 author: ariestiyansyah
 layout: page
 description: Contact Naringu, if you need help or business with me
