--- a/category.html
+++ b/category.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Category Index
+title: 分类
 permalink: /categories/
 tags: [Categories]
 description: "An archive of posts sorted by categories."
