--- a/category.html
+++ b/category.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 分类
-permalink: /categories/
+permalink: category.html
 tags: [Categories]
 description: "An archive of posts sorted by categories."
 ---
