--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,8 @@
 ---
 title: 联系
-author: ariestiyansyah
+author: stardust
 layout: page
+permalink: contact.html
 description: Contact Naringu, if you need help or business with me
 category: contact
 ---
@@ -9,33 +10,33 @@ category: contact
 <section class="inner">
   <h1>联系我</h1>
 
-  <p>
-    <em>
-    Naringu business contact form is here..
-    </em>
-  </p>
+  <!--<p>-->
+    <!--<em>-->
+    <!--Naringu business contact form is here..-->
+    <!--</em>-->
+  <!--</p>-->
   <!-- Please change the email below with your email to activate the form -->
   <form action="http://formspree.io/ariestiyansyah.rizky@gmail.com" role="form" method="POST"> 
 <div class="form-group">
-<label for="name">Your name?</label>
+<label for="name">您的姓名</label>
       <input type="text" name="name" class="form-control" required>
     </div>
 
 <div class="form-group">
-      <label for="_replyto">Email address, please?</label>
+      <label for="_replyto">邮箱地址</label>
       <input type="email" name="_replyto" class="form-control" required>
     </div>
 
 <div class="form-group">
-      <label for="problem">What problem you have?</label>
+      <label for="problem">有什么问题？</label>
       <textarea name="problem" class="form-control" rows="2"></textarea>
     </div>
 
 
 <div class="form-group">
-      <label for="project">Project Category</label>
+      <label for="project">项目分类</label>
       <select name="project" class="form-control">
-        <option value="">Choose...</option>
+        <option value="">请选择...</option>
         <option>E-commerce</option>
         <option>Mobile Application</option>
         <option>Website/Blog</option>
@@ -46,14 +47,14 @@ category: contact
     </div>
 
 <div class="form-group">
-      <label for="message">How can I help you?</label>
+      <label for="message">我要怎么帮助你？</label>
       <textarea name="body" class="form-control" rows="4" width="100%" required></textarea>
     </div>
 
 <div>
       <input type="hidden" name="">
-      <input type="submit" class="submit-btn" value="Let's make business">
-      or <a href="mailto:finalxcode@gmail.com">Drop me an emaill</a>
+      <input type="submit" class="submit-btn" value="让我们做生意吧">
+      或者 <a href="mailto:finalxcode@gmail.com">给我发一封电子邮件</a>
     </div>
   </form>
 </section>
